force-app/main/default/objects/Notification_Setting__c/Notification_Setting__c.object-meta.xml
<CustomObject>
    <label>Notification Setting</label>
    <nameField>
        <label>Notification Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>