force-app/main/default/objects/Notification_Setting__c/fields/Advance_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Advance_Reminders__c</fullName>
    <label>Advance Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 days prior</fullName>
            </value>
            <value>
                <fullName>7 days prior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>