force-app/main/default/objects/Notification_Setting__c/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <label>Escalation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 days overdue</fullName>
            </value>
            <value>
                <fullName>7 days overdue</fullName>
            </value>
            <value>
                <fullName>10 days overdue</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>