force-app/main/default/objects/Notification_Setting__c/fields/Last_Date_for_submit__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_for_submit__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Last Date for submit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>