force-app/main/default/objects/Notification_Setting__c/fields/Notification_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Notification_Frequency__c</fullName>
    <label>Notification Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Every Other Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>