force-app/main/default/objects/Notification_Setting__c/fields/On_boarding_Period__c.field-meta.xml
<CustomField>
    <fullName>On_boarding_Period__c</fullName>
    <description>This field contains the Onboarding Period for the sales rep.</description>
    <label>On boarding Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>